Fix z-index of teaser splitter.

--- a/style.css
+++ b/style.css
@@ -559,7 +559,12 @@ input.form-submit {
     }
 
   /* Teaser splitter */
-  div.teaser-button-wrapper { padding:5px 5px 0px; }
+  div.teaser-button-wrapper {
+    position:relative;
+    z-index:1;
+    padding:5px 5px 0px;
+    }
+
   input.teaser-button { font-size:11px; }
   form input#edit-delete { color:#ccc; }
 
